Improve unit tests assertions for docling
Several tests were checking only that the result was not null and empty.
Now checking some subparts of expected result and the file type.

Signed-off-by: Aurélien Pupier <apupier@ibm.com>